--- a/Assignment2-Physics/index.html
+++ b/Assignment2-Physics/index.html
@@ -10,6 +10,7 @@
     <script src="particle.js" type="text/javascript"></script>
     <script src="liquid.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
+    <script src="pelini.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
