--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <h3>
-<a id="session1-assignment2-physicsindexhtml" class="anchor" href="#session1-assignment2-physicsindexhtml" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>[Session1] [[Assignment2-Physics/index.html]]</h3>
+<a id="my-internal-link-assignment2-physicsindexhtml-" class="anchor" href="#my-internal-link-assignment2-physicsindexhtml-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>[[my internal link| Assignment2-Physics/index.html ]]</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
