Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       </header>
       <section>
         <h3>
-<a id="assignment-1-random-walker" class="anchor" href="#assignment-1-random-walker" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Assignment 1: Random Walker</h3>
+<a id="assignment-1-random-walker-100" class="anchor" href="#assignment-1-random-walker-100" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Assignment 1: Random Walker 100%</h3>
 
 <p>Create your own object that moves around the screen. What is it? A butterfly? An alien? Be as creative as you like.</p>
 
 <h3>
-<a id="assignment-2-physics" class="anchor" href="#assignment-2-physics" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Assignment 2: Physics</h3>
+<a id="assignment-2-physics-84" class="anchor" href="#assignment-2-physics-84" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Assignment 2: Physics 84%</h3>
 
 <p>Create a simulation entirely driven by forces.</p>
 
