Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         <h1>Thenatureofcode</h1>
         <p>many many rainbows, rainbows everywere</p>
 
-        <p class="view"><a href="https://github.com/cybermarinella/thenatureofcode">View the Project on GitHub <small>cybermarinella/thenatureofcode</small></a></p>
+        <p class="view"><a href="https://github.com/cybermarinella/theNatureofCode">View the Project on GitHub <small>cybermarinella/theNatureofCode</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/cybermarinella/thenatureofcode/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/cybermarinella/thenatureofcode/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/cybermarinella/thenatureofcode">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/cybermarinella/theNatureofCode/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/cybermarinella/theNatureofCode/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/cybermarinella/theNatureofCode">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
         <h3>
-<a id="assignment-1-random-walker-100" class="anchor" href="#assignment-1-random-walker-100" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Assignment 1: Random Walker 100%</h3>
+<a id="assignment-1-random-walker" class="anchor" href="#assignment-1-random-walker" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>[Assignment 1: Random Walker]</h3>
 
-<p>Create your own object that moves around the screen. What is it? A butterfly? An alien? Be as creative as you like.</p>
+<p>In this session we’ll review the basics of p5.js and get everyone up and running with posting sketches online. We’ll look at how object-oriented programming works in JS and create simple sketches of objects moving around a canvas.</p>
 
 <h3>
 <a id="assignment-2-physics-84" class="anchor" href="#assignment-2-physics-84" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Assignment 2: Physics 84%</h3>
