Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,18 +28,20 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="assignment-1-random-walker" class="anchor" href="#assignment-1-random-walker" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>[Assignment 1: Random Walker]</h3>
+        <h2>
+<a id="assignment-1-random-walker-100" class="anchor" href="#assignment-1-random-walker-100" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://cybermarinella.github.io/theNatureofCode/Kadenze01-RandomWalker/">Assignment 1: Random Walker</a> 100%</h2>
 
-<p>In this session we’ll review the basics of p5.js and get everyone up and running with posting sketches online. We’ll look at how object-oriented programming works in JS and create simple sketches of objects moving around a canvas.</p>
+<p><strong>Create your own object that moves around the screen. What is it? A butterfly? An alien? Be as creative as you like.</strong>
+In this session we’ll review the basics of p5.js and get everyone up and running with posting sketches online. We’ll look at how object-oriented programming works in JS and create simple sketches of objects moving around a canvas.</p>
 
-<h3>
-<a id="assignment-2-physics-84" class="anchor" href="#assignment-2-physics-84" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Assignment 2: Physics 84%</h3>
+<h2>
+<a id="assignment-2-physics-110" class="anchor" href="#assignment-2-physics-110" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://cybermarinella.github.io/theNatureofCode/Assignment2-Physics/">Assignment 2: Physics</a> 110%</h2>
 
-<p>Create a simulation entirely driven by forces.</p>
+<p><strong>Create a simulation entirely driven by forces.</strong>
+This session will look at the concept of a vector and implement sketches using a p5.Vector object. By creating objects with vectors for position, velocity, and acceleration, we’ll build a simple “hello world” physics engine.</p>
 
-<h3>
-<a id="assignment-3-steering-forces" class="anchor" href="#assignment-3-steering-forces" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Assignment 3: Steering Forces</h3>
+<h2>
+<a id="assignment-3-steering-forces" class="anchor" href="#assignment-3-steering-forces" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Assignment 3: Steering Forces</h2>
 
 <p>This assignment will have you creating your own simulation using steering forces.</p>
       </section>
