Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ In this session we’ll review the basics of p5.js and get everyone up and runni
 This session will look at the concept of a vector and implement sketches using a p5.Vector object. By creating objects with vectors for position, velocity, and acceleration, we’ll build a simple “hello world” physics engine.</p>
 
 <h2>
-<a id="assignment-3-steering-forceshttpcybermarinellagithubiothenatureofcodekadenze03-steering-behaviors" class="anchor" href="#assignment-3-steering-forceshttpcybermarinellagithubiothenatureofcodekadenze03-steering-behaviors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>[Assignment 3: Steering Forces]((<a href="http://cybermarinella.github.io/theNatureofCode/Kadenze03-Steering">http://cybermarinella.github.io/theNatureofCode/Kadenze03-Steering</a> Behaviors)</h2>
+<a id="assignment-3-steering-forces" class="anchor" href="#assignment-3-steering-forces" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://cybermarinella.github.io/theNatureofCode/Kadenze03-Steering%20Behaviors">Assignment 3: Steering Forces</a>
+</h2>
 
 <p><strong>This assignment will have you creating your own simulation using steering forces.</strong>
 This session, we’ll examine a special kind of force (pioneered by Craig Reynolds) — a steering force — that moves an object according to its own goals or desires. Examples are wandering, seeking a target, path following, obstacle...</p>
