--- a/index.html
+++ b/index.html
@@ -1,20 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>session3_vehicle</title>
-    <script src="libraries/p5.js" type="text/javascript"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Thenatureofcode by cybermarinella</title>
 
-    <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
-
-    <script src="vehicle.js" type="text/javascript"></script>
-    <script src="flowfield.js" type="text/javascript"></script>
-    <script src="sketch.js" type="text/javascript"></script>
-
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-    <script src="libraries/stats.min.js"></script>
+    <div class="wrapper">
+      <header>
+        <h1>Thenatureofcode</h1>
+        <p>many many rainbows, rainbows everywere</p>
+
+        <p class="view"><a href="https://github.com/cybermarinella/theNatureofCode">View the Project on GitHub <small>cybermarinella/theNatureofCode</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/cybermarinella/theNatureofCode/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/cybermarinella/theNatureofCode/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/cybermarinella/theNatureofCode">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h2>
+<a id="assignment-1-random-walker" class="anchor" href="#assignment-1-random-walker" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://cybermarinella.github.io/theNatureofCode/Kadenze01-RandomWalker/">Assignment 1: Random Walker</a>
+</h2>
+
+<p><strong>Create your own object that moves around the screen. What is it? A butterfly? An alien? Be as creative as you like.</strong>
+In this session we’ll review the basics of p5.js and get everyone up and running with posting sketches online. We’ll look at how object-oriented programming works in JS and create simple sketches of objects moving around a canvas.
+100%</p>
+
+<h2>
+<a id="assignment-2-physics" class="anchor" href="#assignment-2-physics" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://cybermarinella.github.io/theNatureofCode/Assignment2-Physics/">Assignment 2: Physics</a>
+</h2>
+
+<p><strong>Create a simulation entirely driven by forces.</strong>
+This session will look at the concept of a vector and implement sketches using a p5.Vector object. By creating objects with vectors for position, velocity, and acceleration, we’ll build a simple “hello world” physics engine.
+110%</p>
+
+<h2>
+<a id="assignment-3-steering-forces" class="anchor" href="#assignment-3-steering-forces" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://cybermarinella.github.io/theNatureofCode/Kadenze03-Steering%20Behaviors">Assignment 3: Steering Forces</a>
+</h2>
+
+<p><strong>This assignment will have you creating your own simulation using steering forces.</strong>
+This session, we’ll examine a special kind of force (pioneered by Craig Reynolds) — a steering force — that moves an object according to its own goals or desires. Examples are wandering, seeking a target, path following, obstacle...</p>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/cybermarinella">cybermarinella</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
 </html>
