Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ This session will look at the concept of a vector and implement sketches using a
 </h2>
 
 <p><strong>This assignment will have you creating your own simulation using steering forces.</strong>
-This session, we’ll examine a special kind of force (pioneered by Craig Reynolds) — a steering force — that moves an object according to its own goals or desires. Examples are wandering, seeking a target, path following, obstacle...</p>
+This session, we’ll examine a special kind of force (pioneered by Craig Reynolds) — a steering force — that moves an object according to its own goals or desires. Examples are wandering, seeking a target, path following, obstacle...
+100%</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/cybermarinella">cybermarinella</a></p>
