Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@ This session will look at the concept of a vector and implement sketches using a
 <p><strong>This assignment will have you creating your own simulation using steering forces.</strong>
 This session, we’ll examine a special kind of force (pioneered by Craig Reynolds) — a steering force — that moves an object according to its own goals or desires. Examples are wandering, seeking a target, path following, obstacle...
 100%</p>
+
+<h2>
+<a id="assignment-4-fractal-design" class="anchor" href="#assignment-4-fractal-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/cybermarinella/theNatureofCode/tree/gh-pages/Kadenze04-FractalDesign">Assignment 4: Fractal Design</a>
+</h2>
+
+<p><strong>Using recursion, integrate a fractal design into a simulation.</strong>
+In this session we will cover the concept of a fractal and look at ways of generating fractal patterns with code.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/cybermarinella">cybermarinella</a></p>
