Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ This session will look at the concept of a vector and implement sketches using a
 110%</p>
 
 <h2>
-<a id="assignment-3-steering-forces" class="anchor" href="#assignment-3-steering-forces" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://cybermarinella.github.io/theNatureofCode/Kadenze03-Steering%20Behaviors">Assignment 3: Steering Forces</a>
+<a id="assignment-3-steering-forces" class="anchor" href="#assignment-3-steering-forces" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://cybermarinella.github.io/theNatureofCode/Kadenze03-Steering%20Behaviors/">Assignment 3: Steering Forces</a>
 </h2>
 
 <p><strong>This assignment will have you creating your own simulation using steering forces.</strong>
@@ -53,7 +53,7 @@ This session, we’ll examine a special kind of force (pioneered by Craig Reynol
 100%</p>
 
 <h2>
-<a id="assignment-4-fractal-design" class="anchor" href="#assignment-4-fractal-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/cybermarinella/theNatureofCode/tree/gh-pages/Kadenze04-FractalDesign">Assignment 4: Fractal Design</a>
+<a id="assignment-4-fractal-design" class="anchor" href="#assignment-4-fractal-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://cybermarinella.github.io/theNatureofCode/Kadenze04-FractalDesign/">Assignment 4: Fractal Design</a>
 </h2>
 
 <p><strong>Using recursion, integrate a fractal design into a simulation.</strong>
